completes Lecture 2 and adds parts of Lecture 3

--- a/Lecture_2_SQL_Statement.ipynb
+++ b/Lecture_2_SQL_Statement.ipynb
@@ -79,7 +79,77 @@
     "    \n",
     "- ORDER BY has to be _after_ any WHERE clause\n",
     "- LIMIT has to be last\n",
-    "- FROM needs to be first"
+    "- FROM needs to be first\n",
+    "\n",
+    "## 2.5 Columns\n",
+    "Selecting Columns\n",
+    "-- world.db\n",
+    "\n",
+    "- `SELECT * FROM Country;`\n",
+    "- `SELECT Name, Continent, Region FROM Country;`\n",
+    "- `SELECT Name AS Country, Continent, Region FROM Country;`\n",
+    "- `SELECT Name AS Country, Region, Continent FROM Country;`\n",
+    "\n",
+    "We've seen all these before.\n",
+    "\n",
+    "## 2.6 COUNT\n",
+    "Counting Rows\n",
+    "-- world.db\n",
+    "\n",
+    "- `SELECT COUNT(*) FROM Country;`\n",
+    "    - counts all the rows\n",
+    "- `SELECT COUNT(*) FROM Country WHERE Population > 1000000;`\n",
+    "    - counts all the rows where population > 1000000\n",
+    "- `SELECT COUNT(*) FROM Country WHERE Population > 100000000;`\n",
+    "- `SELECT COUNT(*) FROM Country WHERE Population > 100000000 AND Continent = 'Europe' ;`\n",
+    "    - can add conditiosn other than population\n",
+    "\n",
+    "- `SELECT COUNT(*) FROM Country;`\n",
+    "    - this counts ALL rows\n",
+    "- `SELECT COUNT(LifeExpectancy) FROM Country;`\n",
+    "    - only counts rows where \"LifeExpectancy\" has some data.\n",
+    "    \n",
+    "## 2.7 INSERT\n",
+    "Inserting Data\n",
+    "-- test.db\n",
+    "\n",
+    "- `SELECT * FROM customer;`\n",
+    "\n",
+    "- `INSERT INTO customer (name, address, city, state, zip) \n",
+    "  VALUES ('Fred Flintstone', '123 Cobblestone Way', 'Bedrock', 'CA', '91234');`\n",
+    "    - adds a new row!\n",
+    "\n",
+    "- `INSERT INTO customer (name, city, state) \n",
+    "  VALUES ('Jimi Hendrix', 'Renton', 'WA');`\n",
+    "    - can insert a row and populate only some columns\n",
+    "    - `SELECT COUNT(address) FROM customer` returns 4\n",
+    "    \n",
+    "- Note: can use id as a field in insert\n",
+    "- but if id exists, then SQL returns error. i.e, insert can't overwrite\n",
+    "\n",
+    "## 2.8 UPDATE\n",
+    "Updating Data (or Changing data)\n",
+    "-- test.db\n",
+    "\n",
+    "- `SELECT * FROM customer;`\n",
+    "- `UPDATE customer SET address = '123 Music Avenue', zip = '98056' WHERE id = 5;`\n",
+    "    - or `UPDA TE customer SET address = '123 Music Avenue', zip = '98056' WHERE name = 'Jimi Hendrix';`\n",
+    "- `UPDATE customer SET address = '2603 S Washington St', zip = '98056' WHERE id = 5;`\n",
+    "- `UPDATE customer SET address = NULL, zip = NULL WHERE id = 5;`\n",
+    "    - NULL is a special value (no data)\n",
+    "    \n",
+    "## 2.9 DELETE\n",
+    "Deleting Data\n",
+    "-- test.db\n",
+    "\n",
+    "- `SELECT * FROM customer WHERE id = 4;`\n",
+    "- `DELETE FROM customer WHERE id = 4;`\n",
+    "- `SELECT * FROM customer;`\n",
+    "- `DELETE FROM customer WHERE id = 5;`\n",
+    "- `SELECT * FROM customer;`\n",
+    "\n",
+    "- Note: if you want to delete an entry in a column, UPDATE to NULL\n",
+    "- If you want to delete an entire row, then use DELETE"
    ]
   }
  ],
