complete Lecture 3 and add parts of Lecture 4

--- a/Lecture_3_Fundamental_Concepts.ipynb
+++ b/Lecture_3_Fundamental_Concepts.ipynb
@@ -78,7 +78,7 @@
     "    - '' is not a NULL value\n",
     "- `SELECT * FROM test WHERE b IS NULL;`\n",
     "- `SELECT * FROM test WHERE b = '';`\n",
-    "    - doesn't return anything (NULL is not '')\n",
+    "    - doesn't return anything (NULL is not ' ')\n",
     "- `SELECT * FROM test WHERE c = '';`\n",
     "    - this works\n",
     "- `SELECT * FROM test WHERE c IS NULL;`\n",
@@ -94,11 +94,160 @@
     "    \n",
     "- `INSERT INTO test VALUES ( 1, 'this', 'that' );`\n",
     "- `SELECT * FROM test;`\n",
-    "\n",
+    "<br><br>\n",
     "- `INSERT INTO test ( b, c ) VALUES ( 'one', 'two' );`\n",
     "- `INSERT INTO test ( a, c ) VALUES ( 1, 'two' );`\n",
+    "    - The above two fail\n",
     "- `INSERT INTO test ( a, b ) VALUES ( 1, 'two' );`\n",
-    "- `DROP TABLE IF EXISTS test;`"
+    "    - This works\n",
+    "- `DROP TABLE IF EXISTS test;`\n",
+    "\n",
+    "## 3.6 Constraints\n",
+    "-- test.db\n",
+    "\n",
+    "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT );`\n",
+    "- `INSERT INTO test ( a, b ) VALUES ( 'one', 'two' );`\n",
+    "- `SELECT * FROM test;`\n",
+    "    - adds NULL to column `c` by default.\n",
+    "<br><br>\n",
+    "Replace first statement with\n",
+    "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT NOT NULL );`\n",
+    "    - Fails. Can't insert into two columns when the other column has a not null constraint\n",
+    "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT DEFAULT 'panda' );`\n",
+    "    - This works. Column `c` has panda has an entry\n",
+    "- `CREATE TABLE test ( a TEXT UNIQUE, b TEXT, c TEXT DEFAULT 'panda' );`\n",
+    "    - The unique constraint will not allow the same entry in multiple rows for that column. NULL is exempt from the unique constraint (most often, since NULL is not any particular value). Possible use in customer database.\n",
+    "- `CREATE TABLE test ( a TEXT UNIQUE NOT NULL, b TEXT, c TEXT DEFAULT 'panda' );`\n",
+    "    - to fix that, you can combine UNIQUE NOT NULL constraint\n",
+    "\n",
+    "\n",
+    "## 3.7 ALTER TABLE\n",
+    "- Sometimes you need to change the database schema after it has been defined.\n",
+    "-- test.db\n",
+    "\n",
+    "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT );`\n",
+    "- `INSERT INTO test VALUES ( 'one', 'two', 'three');`\n",
+    "- `INSERT INTO test VALUES ( 'two', 'three', 'four');`\n",
+    "- `INSERT INTO test VALUES ( 'three', 'four', 'five');`\n",
+    "- `SELECT * FROM test;`\n",
+    "    - prelim table\n",
+    "<br><br>\n",
+    "- Suppose you want to add a column:\n",
+    "    - `ALTER TABLE test ADD d TEXT;`\n",
+    "- You can also use constraints:\n",
+    "    - `ALTER TABLE test ADD e TEXT DEFAULT 'panda';`\n",
+    "- This command should be carefully used. It may alter several other pieces of code.\n",
+    "\n",
+    "## 3.8 ID\n",
+    "- Typically ID columns are automatically populated. This column hold a unique value for each row in a table.\n",
+    "- How you create it depends on the database system. These instructions are sepcific to SQLite.\n",
+    "-- test.db\n",
+    "\n",
+    "- `CREATE TABLE test (\n",
+    "  id INTEGER PRIMARY KEY,\n",
+    "  a INTEGER,\n",
+    "  b TEXT\n",
+    ");`\n",
+    "- `INSERT INTO test (a, b) VALUES ( 10, 'a' );`\n",
+    "- `INSERT INTO test (a, b) VALUES ( 11, 'b' );`\n",
+    "- `INSERT INTO test (a, b) VALUES ( 12, 'c' );`\n",
+    "- `SELECT * FROM test;`\n",
+    "- `DROP TABLE IF EXISTS test;`\n",
+    "\n",
+    "## 3.9 WHERE, LIKE, and IN\n",
+    "-- world.db\n",
+    "- How do we query the database for specific data? Using WHERE.\n",
+    "\n",
+    "- `SELECT * FROM Country;`\n",
+    "    - Selects everything\n",
+    "- `SELECT Name, Continent, Population FROM Country \n",
+    "  WHERE Population < 100000 ORDER BY Population DESC;`\n",
+    "    - Selects particular columns\n",
+    "        - where population < 100000\n",
+    "        - and orders by descending order of population\n",
+    "- `SELECT Name, Continent, Population FROM Country \n",
+    "  WHERE Population < 100000 OR Population IS NULL ORDER BY Population DESC;`\n",
+    "    - remember NULL is not a value, so to include this add another clause to WHERE using the OR operator.\n",
+    "- `SELECT Name, Continent, Population FROM Country \n",
+    "  WHERE Population < 100000 AND Continent = 'Oceania' ORDER BY Population DESC;`\n",
+    "    - we can also add another clause using the AND operator.\n",
+    "- `SELECT Name, Continent, Population FROM Country \n",
+    "  WHERE Name LIKE '\\%island\\%' ORDER BY Name;`\n",
+    "    - the LIKE operator filters results \n",
+    "    - the percent sign is a 'wildcard'. By placing on either sign, we query data which have island anywhere in the string.\n",
+    "    - if `'\\%island'`, this queries data that end with island\n",
+    "    - to begin with island, `'island\\%'`\n",
+    "    - another example `'_a%'` => first character can be anything, second character must be a string.\n",
+    "- `SELECT Name, Continent, Population FROM Country \n",
+    " WHERE Continent IN ( 'Europe', 'Asia' ) ORDER BY Name;`\n",
+    "     - to match values _in_ a list, the IN operator is used.\n",
+    "     \n",
+    "## 3.10 SELECT DISTINCT\n",
+    "-- world.db\n",
+    "- `SELECT Continent FROM Country;`\n",
+    "- `SELECT DISTINCT Continent FROM Country;`\n",
+    "    - Using the SELECT DISTINCT statement, you will get only unique results. \n",
+    " \n",
+    " -- test.db\n",
+    "- `DROP TABLE IF EXISTS test;\n",
+    "CREATE TABLE test ( a int, b int );\n",
+    "INSERT INTO test VALUES ( 1, 1 );\n",
+    "INSERT INTO test VALUES ( 2, 1 );\n",
+    "INSERT INTO test VALUES ( 3, 1 );\n",
+    "INSERT INTO test VALUES ( 4, 1 );\n",
+    "INSERT INTO test VALUES ( 5, 1 );\n",
+    "INSERT INTO test VALUES ( 1, 2 );\n",
+    "INSERT INTO test VALUES ( 1, 2 );\n",
+    "INSERT INTO test VALUES ( 1, 2 );\n",
+    "INSERT INTO test VALUES ( 1, 2 );\n",
+    "INSERT INTO test VALUES ( 1, 2 );\n",
+    "SELECT * FROM test;`\n",
+    "\n",
+    "- `SELECT DISTINCT a FROM test;`\n",
+    "    - shows only rows with distinct values in column `a`\n",
+    "- `SELECT DISTINCT b FROM test;`\n",
+    "    - shows only rows with distinct values in column `b`\n",
+    "- `SELECT DISTINCT a, b FROM test;`\n",
+    "    - shows only rows with distinct values in the pair (`a`, `b`).\n",
+    "    \n",
+    "## 3.11 ORDER BY\n",
+    "-- world.db\n",
+    "\n",
+    "- `SELECT Name FROM Country;`\n",
+    "- `SELECT Name FROM Country ORDER BY Name;`\n",
+    "    - _sorts_ by the name column (ASCII order, default is ascending)\n",
+    "- `SELECT Name FROM Country ORDER BY Name DESC;`\n",
+    "    - _sorts_ be descending order\n",
+    "- `SELECT Name FROM Country ORDER BY Name ASC;`\n",
+    "    - same as default\n",
+    "- `SELECT Name, Continent FROM Country ORDER BY Continent, Name;`\n",
+    "    - you can also sort by multiple things. First by continent, and within continent, individual countries are also sorted\n",
+    "- `SELECT Name, Continent, Region FROM Country ORDER BY Continent DESC, Region, Name;`\n",
+    "    - you can make it more complicated with each being ASC or DESC\n",
+    "\n",
+    "## 3.12 CASE\n",
+    "Use when you need conditional expressions\n",
+    "-- test.db\n",
+    "\n",
+    "- `DROP TABLE IF EXISTS booltest;\n",
+    "CREATE TABLE booltest (a INTEGER, b INTEGER);\n",
+    "INSERT INTO booltest VALUES (1, 0);\n",
+    "SELECT * FROM booltest;`\n",
+    "\n",
+    "- 0 is considered false, anything else is considered true.\n",
+    "- `SELECT\n",
+    "    CASE WHEN a THEN 'true' ELSE 'false' END as boolA,\n",
+    "    CASE WHEN b THEN 'true' ELSE 'false' END as boolB\n",
+    "    FROM booltest\n",
+    ";`\n",
+    "\n",
+    "- `SELECT\n",
+    "  CASE a WHEN 1 THEN 'true' ELSE 'false' END AS boolA,\n",
+    "  CASE b WHEN 1 THEN 'true' ELSE 'false' END AS boolB \n",
+    "  FROM booltest\n",
+    ";`\n",
+    "\n",
+    "- `DROP TABLE IF EXISTS booltest;`"
    ]
   }
  ],
