complete lectures 4 to 8

--- a/Lecture_04_Relationships.ipynb
+++ b/Lecture_04_Relationships.ipynb
@@ -73,7 +73,33 @@
     "  FROM sale AS s\n",
     "  JOIN item AS i ON s.item_id = i.id\n",
     "  ;`\n",
-    "<br><br>"
+    "<br><br>\n",
+    "\n",
+    "## 4.3 Junction\n",
+    "In practice, tables have many-to-many relationships.\n",
+    "-- test.db\n",
+    "\n",
+    "- `SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
+    "  FROM sale AS s\n",
+    "  JOIN item AS i ON s.item_id = i.id\n",
+    "  JOIN customer AS c ON s.customer_id = c.id\n",
+    "  ORDER BY Cust, Item\n",
+    ";`\n",
+    "    - combines cutomer, sale and item tables\n",
+    "    - these can be ordered as well\n",
+    "\n",
+    "- What if you want your table to include a customer without sales?\n",
+    "- `INSERT INTO customer ( name ) VALUES ( 'Jane Smith' );\n",
+    "SELECT * FROM customer;`\n",
+    "\n",
+    "- Use left join to join other tables _with Customer_.\n",
+    "- `SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
+    "  FROM customer AS c\n",
+    "  LEFT JOIN sale AS s ON s.customer_id = c.id\n",
+    "  LEFT JOIN item AS i ON s.item_id = i.id\n",
+    "  ORDER BY Cust, Item\n",
+    ";`\n",
+    "    - This is amazing. It adds multiple sale entries for customers in separate rows."
    ]
   }
  ],
