use ``` for code blocks

--- a/Lecture_02_SQL_Statement.ipynb
+++ b/Lecture_02_SQL_Statement.ipynb
@@ -18,15 +18,21 @@
     "- CRUD: 4 fundamental database system functions. Create Read Update Delete.\n",
     "- SELECT: all queries that return values. (R in CRUD)\n",
     "- INSERT: add a row to a table (C in CRUD).\n",
-    "    - example: `INSERT INTO Customer (name, city, state)\n",
-    "    VALUES ('Jimi Hendrix', 'Renton', 'WA');`\n",
+    "    - example:\n",
+    "```sql\n",
+    "INSERT INTO Customer (name, city, state)\n",
+    "    VALUES ('Jimi Hendrix', 'Renton', 'WA');\n",
+    "```\n",
     "    - Broken into two lines to improve readability.\n",
     "- UPDATE: to change data (U in CRUD)\n",
-    "    - example: `UPDATE customer \n",
-    "    SET \n",
-    "        address = '123 Music Avenue', \n",
-    "        zip = '98056' \n",
-    "    WHERE id = 5;`\n",
+    "    - example: \n",
+    "```sql\n",
+    "UPDATE customer \n",
+    "SET \n",
+    "    address = '123 Music Avenue', \n",
+    "    zip = '98056' \n",
+    "WHERE id = 5;\n",
+    "```\n",
     "- DELETE: remove rows in a table (D in CRUD).\n",
     "    - example: `DELETE FROM Customer WHERE id = 4;`\n",
     "    \n",
@@ -84,12 +90,12 @@
     "## 2.5 Columns\n",
     "Selecting Columns\n",
     "-- world.db\n",
-    "\n",
-    "- `SELECT * FROM Country;`\n",
-    "- `SELECT Name, Continent, Region FROM Country;`\n",
-    "- `SELECT Name AS Country, Continent, Region FROM Country;`\n",
-    "- `SELECT Name AS Country, Region, Continent FROM Country;`\n",
-    "\n",
+    "```sql\n",
+    "SELECT * FROM Country;\n",
+    "SELECT Name, Continent, Region FROM Country;\n",
+    "SELECT Name AS Country, Continent, Region FROM Country;\n",
+    "SELECT Name AS Country, Region, Continent FROM Country;\n",
+    "```\n",
     "We've seen all these before.\n",
     "\n",
     "## 2.6 COUNT\n",
@@ -115,14 +121,18 @@
     "\n",
     "- `SELECT * FROM customer;`\n",
     "\n",
-    "- `INSERT INTO customer (name, address, city, state, zip) \n",
-    "  VALUES ('Fred Flintstone', '123 Cobblestone Way', 'Bedrock', 'CA', '91234');`\n",
-    "    - adds a new row!\n",
+    "- To add a new row:\n",
+    "```sql\n",
+    "INSERT INTO customer (name, address, city, state, zip) \n",
+    "    VALUES ('Fred Flintstone', '123 Cobblestone Way', 'Bedrock', 'CA', '91234');\n",
+    "```\n",
     "\n",
-    "- `INSERT INTO customer (name, city, state) \n",
-    "  VALUES ('Jimi Hendrix', 'Renton', 'WA');`\n",
-    "    - can insert a row and populate only some columns\n",
-    "    - `SELECT COUNT(address) FROM customer` returns 4\n",
+    "- To populate some columns in a row:\n",
+    "```sql\n",
+    "INSERT INTO customer (name, city, state) \n",
+    "    VALUES ('Jimi Hendrix', 'Renton', 'WA');\n",
+    "```\n",
+    "- `SELECT COUNT(address) FROM customer` returns 4\n",
     "    \n",
     "- Note: can use id as a field in insert\n",
     "- but if id exists, then SQL returns error. i.e, insert can't overwrite\n",
@@ -131,23 +141,25 @@
     "Updating Data (or Changing data)\n",
     "-- test.db\n",
     "\n",
-    "- `SELECT * FROM customer;`\n",
-    "- `UPDATE customer SET address = '123 Music Avenue', zip = '98056' WHERE id = 5;`\n",
-    "    - or `UPDA TE customer SET address = '123 Music Avenue', zip = '98056' WHERE name = 'Jimi Hendrix';`\n",
-    "- `UPDATE customer SET address = '2603 S Washington St', zip = '98056' WHERE id = 5;`\n",
-    "- `UPDATE customer SET address = NULL, zip = NULL WHERE id = 5;`\n",
-    "    - NULL is a special value (no data)\n",
+    "```sql\n",
+    "SELECT * FROM customer;\n",
+    "UPDATE customer SET address = '123 Music Avenue', zip = '98056' WHERE id = 5;\n",
+    "-- or `UPDATE customer SET address = '123 Music Avenue', zip = '98056' WHERE name = 'Jimi Hendrix';\n",
+    "UPDATE customer SET address = '2603 S Washington St', zip = '98056' WHERE id = 5;\n",
+    "UPDATE customer SET address = NULL, zip = NULL WHERE id = 5;\n",
+    "```\n",
+    "- NULL is a special value (no data)\n",
     "    \n",
     "## 2.9 DELETE\n",
     "Deleting Data\n",
     "-- test.db\n",
-    "\n",
-    "- `SELECT * FROM customer WHERE id = 4;`\n",
-    "- `DELETE FROM customer WHERE id = 4;`\n",
-    "- `SELECT * FROM customer;`\n",
-    "- `DELETE FROM customer WHERE id = 5;`\n",
-    "- `SELECT * FROM customer;`\n",
-    "\n",
+    "```sql\n",
+    "SELECT * FROM customer WHERE id = 4;\n",
+    "DELETE FROM customer WHERE id = 4;\n",
+    "SELECT * FROM customer;\n",
+    "DELETE FROM customer WHERE id = 5;\n",
+    "SELECT * FROM customer;\n",
+    "```\n",
     "- Note: if you want to delete an entry in a column, UPDATE to NULL\n",
     "- If you want to delete an entire row, then use DELETE"
    ]
