--- a/Lecture_03_Fundamental_Concepts.ipynb
+++ b/Lecture_03_Fundamental_Concepts.ipynb
@@ -85,13 +85,14 @@
     "    - '' is not NULL\n",
     "---\n",
     "- `DROP TABLE IF EXISTS test;`\n",
-    "- `CREATE TABLE test (\n",
-    "  a INTEGER NOT NULL,\n",
-    "  b TEXT NOT NULL,\n",
-    "  c TEXT\n",
-    ");`\n",
-    "    - create new table with a NOT NULL constraint\n",
-    "    \n",
+    "- create new table with a NOT NULL constraint\n",
+    "```sql\n",
+    "CREATE TABLE test (\n",
+    "    a INTEGER NOT NULL,\n",
+    "    b TEXT NOT NULL,\n",
+    "    c TEXT\n",
+    ");\n",
+    "```    \n",
     "- `INSERT INTO test VALUES ( 1, 'this', 'that' );`\n",
     "- `SELECT * FROM test;`\n",
     "<br><br>\n",
@@ -124,14 +125,14 @@
     "## 3.7 ALTER TABLE\n",
     "- Sometimes you need to change the database schema after it has been defined.\n",
     "-- test.db\n",
-    "\n",
-    "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT );`\n",
-    "- `INSERT INTO test VALUES ( 'one', 'two', 'three');`\n",
-    "- `INSERT INTO test VALUES ( 'two', 'three', 'four');`\n",
-    "- `INSERT INTO test VALUES ( 'three', 'four', 'five');`\n",
-    "- `SELECT * FROM test;`\n",
-    "    - prelim table\n",
-    "<br><br>\n",
+    "```sql\n",
+    "CREATE TABLE test ( a TEXT, b TEXT, c TEXT );\n",
+    "INSERT INTO test VALUES ( 'one', 'two', 'three');\n",
+    "INSERT INTO test VALUES ( 'two', 'three', 'four');\n",
+    "INSERT INTO test VALUES ( 'three', 'four', 'five');\n",
+    "SELECT * FROM test;\n",
+    "```\n",
+    "---\n",
     "- Suppose you want to add a column:\n",
     "    - `ALTER TABLE test ADD d TEXT;`\n",
     "- You can also use constraints:\n",
@@ -142,17 +143,18 @@
     "- Typically ID columns are automatically populated. This column hold a unique value for each row in a table.\n",
     "- How you create it depends on the database system. These instructions are sepcific to SQLite.\n",
     "-- test.db\n",
-    "\n",
-    "- `CREATE TABLE test (\n",
+    "```sql\n",
+    "CREATE TABLE test (\n",
     "  id INTEGER PRIMARY KEY,\n",
     "  a INTEGER,\n",
     "  b TEXT\n",
-    ");`\n",
-    "- `INSERT INTO test (a, b) VALUES ( 10, 'a' );`\n",
-    "- `INSERT INTO test (a, b) VALUES ( 11, 'b' );`\n",
-    "- `INSERT INTO test (a, b) VALUES ( 12, 'c' );`\n",
-    "- `SELECT * FROM test;`\n",
-    "- `DROP TABLE IF EXISTS test;`\n",
+    ");\n",
+    "INSERT INTO test (a, b) VALUES ( 10, 'a' );\n",
+    "INSERT INTO test (a, b) VALUES ( 11, 'b' );\n",
+    "INSERT INTO test (a, b) VALUES ( 12, 'c' );\n",
+    "SELECT * FROM test;\n",
+    "DROP TABLE IF EXISTS test;\n",
+    "```\n",
     "\n",
     "## 3.9 WHERE, LIKE, and IN\n",
     "-- world.db\n",
@@ -188,8 +190,9 @@
     "- `SELECT DISTINCT Continent FROM Country;`\n",
     "    - Using the SELECT DISTINCT statement, you will get only unique results. \n",
     " \n",
-    " -- test.db\n",
-    "- `DROP TABLE IF EXISTS test;\n",
+    "```sql\n",
+    "-- test.db\n",
+    "DROP TABLE IF EXISTS test;\n",
     "CREATE TABLE test ( a int, b int );\n",
     "INSERT INTO test VALUES ( 1, 1 );\n",
     "INSERT INTO test VALUES ( 2, 1 );\n",
@@ -201,8 +204,8 @@
     "INSERT INTO test VALUES ( 1, 2 );\n",
     "INSERT INTO test VALUES ( 1, 2 );\n",
     "INSERT INTO test VALUES ( 1, 2 );\n",
-    "SELECT * FROM test;`\n",
-    "\n",
+    "SELECT * FROM test;\n",
+    "```\n",
     "- `SELECT DISTINCT a FROM test;`\n",
     "    - shows only rows with distinct values in column `a`\n",
     "- `SELECT DISTINCT b FROM test;`\n",
@@ -229,25 +232,30 @@
     "Use when you need conditional expressions\n",
     "-- test.db\n",
     "\n",
-    "- `DROP TABLE IF EXISTS booltest;\n",
+    "```sql\n",
+    "DROP TABLE IF EXISTS booltest;\n",
     "CREATE TABLE booltest (a INTEGER, b INTEGER);\n",
     "INSERT INTO booltest VALUES (1, 0);\n",
-    "SELECT * FROM booltest;`\n",
+    "SELECT * FROM booltest;\n",
+    "```\n",
     "\n",
     "- 0 is considered false, anything else is considered true.\n",
-    "- `SELECT\n",
+    "\n",
+    "```sql\n",
+    "SELECT\n",
     "    CASE WHEN a THEN 'true' ELSE 'false' END as boolA,\n",
     "    CASE WHEN b THEN 'true' ELSE 'false' END as boolB\n",
     "    FROM booltest\n",
-    ";`\n",
-    "\n",
-    "- `SELECT\n",
-    "  CASE a WHEN 1 THEN 'true' ELSE 'false' END AS boolA,\n",
-    "  CASE b WHEN 1 THEN 'true' ELSE 'false' END AS boolB \n",
-    "  FROM booltest\n",
-    ";`\n",
-    "\n",
-    "- `DROP TABLE IF EXISTS booltest;`"
+    ";\n",
+    "```\n",
+    "```sql\n",
+    "SELECT\n",
+    "    CASE a WHEN 1 THEN 'true' ELSE 'false' END AS boolA,\n",
+    "    CASE b WHEN 1 THEN 'true' ELSE 'false' END AS boolB \n",
+    "    FROM booltest\n",
+    ";\n",
+    "DROP TABLE IF EXISTS booltest;\n",
+    "```"
    ]
   }
  ],
