--- a/Lecture_05_Strings.ipynb
+++ b/Lecture_05_Strings.ipynb
@@ -32,15 +32,18 @@
     "    - second argument is starting position of substring (starting from 1)\n",
     "- `SELECT SUBSTR('this string', 6, 3);`\n",
     "    - third argument is number of characters to return\n",
-    "- `SELECT released,\n",
+    "\n",
+    "```sql\n",
+    "SELECT released,\n",
     "    SUBSTR(released, 1, 4) AS year,\n",
     "    SUBSTR(released, 6, 2) AS month,\n",
     "    SUBSTR(released, 9, 2) AS day\n",
     "  FROM album\n",
     "  ORDER BY released\n",
-    ";`\n",
-    "    - notice that you can order by released (or date)\n",
-    "    - SQL standard doesn't include a SUBSTR but most major systems have this feature (name and usage may differ)\n",
+    ";\n",
+    "```\n",
+    "- notice that you can order by released (or date)\n",
+    "- SQL standard doesn't include a SUBSTR but most major systems have this feature (name and usage may differ)\n",
     "    \n",
     "## 5.4 TRIM\n",
     "\n",
