--- a/Lecture_11_Views_Subselects.ipynb
+++ b/Lecture_11_Views_Subselects.ipynb
@@ -7,50 +7,66 @@
     "# 11 Views and Subselects\n",
     "\n",
     "## 11.1 Simple Subselect\n",
-    "-- world.db\n",
     "\n",
-    "- `CREATE TABLE t ( a TEXT, b TEXT );\n",
+    "```sql\n",
+    "-- world.db\n",
+    "CREATE TABLE t ( a TEXT, b TEXT );\n",
     "INSERT INTO t VALUES ( 'NY0123', 'US4567' );\n",
     "INSERT INTO t VALUES ( 'AZ9437', 'GB1234' );\n",
     "INSERT INTO t VALUES ( 'CA1279', 'FR5678' );\n",
-    "SELECT * FROM t;`\n",
+    "SELECT * FROM t;\n",
+    "```\n",
     "\n",
-    "-` SELECT SUBSTR(a, 1, 2) AS State, SUBSTR(a, 3) AS SCode, \n",
-    "SUBSTR(b, 1, 2) AS Country, SUBSTR(b, 3) AS CCode FROM t;`\n",
-    "    - This is a straight statement. It uses substrings to list table information in more columns\n",
+    "```sql\n",
+    "SELECT SUBSTR(a, 1, 2) AS State, SUBSTR(a, 3) AS SCode, \n",
+    "SUBSTR(b, 1, 2) AS Country, SUBSTR(b, 3) AS CCode FROM t;\n",
+    "```\n",
+    "- This is a straight statement. It uses substrings to list table information in more columns\n",
     "\n",
     "- Here's the interesting part. We can use the above as a datasource to SELECT from, making it a SUBSELECT. Example:\n",
-    "-` SELECT co.Name, ss.CCode FROM (\n",
+    "\n",
+    "```sql\n",
+    "SELECT co.Name, ss.CCode FROM (\n",
     "    SELECT SUBSTR(a, 1, 2) AS State, SUBSTR(a, 3) AS SCode,\n",
     "      SUBSTR(b, 1, 2) AS Country, SUBSTR(b, 3) AS CCode FROM t\n",
     "  ) AS ss\n",
     "  JOIN Country AS co\n",
     "    ON co.Code2 = ss.Country\n",
-    ";`\n",
+    ";\n",
+    "```\n",
     "- This seems like it could be really useful for my work.\n",
     "\n",
     "## 11.2 searching within a result set\n",
     "-- album.db\n",
     "\n",
-    "- `SELECT DISTINCT album_id FROM track WHERE duration <= 90;`\n",
-    "    - returns album IDs. But what albums are they?\n",
+    "```sql\n",
+    "SELECT DISTINCT album_id FROM track WHERE duration <= 90;\n",
+    "```\n",
+    "- returns album IDs. But what albums are they?\n",
     "\n",
-    "- `SELECT * FROM album\n",
+    "```sql\n",
+    "SELECT * FROM album\n",
     "  WHERE id IN (SELECT DISTINCT album_id FROM track WHERE duration <= 90)\n",
-    ";`\n",
+    ";\n",
+    "```\n",
     "\n",
     "- To get more details about all the the tracks in these albums:\n",
-    "- `SELECT a.title AS album, a.artist, t.track_number AS seq, t.title, t.duration AS secs\n",
+    "\n",
+    "```sql\n",
+    "SELECT a.title AS album, a.artist, t.track_number AS seq, t.title, t.duration AS secs\n",
     "  FROM album AS a\n",
     "  JOIN track AS t\n",
     "    ON t.album_id = a.id\n",
     "  WHERE a.id IN (SELECT DISTINCT album_id FROM track WHERE duration <= 90)\n",
     "  ORDER BY a.title, t.track_number\n",
-    ";`\n",
+    ";\n",
+    "```\n",
     "\n",
     "- What if we want only those two tracks?\n",
     "    - JOIN on the subselect\n",
-    "-` SELECT a.title AS album, a.artist, t.track_number AS seq, t.title, t.duration AS secs\n",
+    "    \n",
+    "```sql\n",
+    "SELECT a.title AS album, a.artist, t.track_number AS seq, t.title, t.duration AS secs\n",
     "  FROM album AS a\n",
     "  JOIN (\n",
     "    SELECT DISTINCT album_id, track_number, duration, title\n",
@@ -59,26 +75,32 @@
     "  ) AS t\n",
     "    ON t.album_id = a.id\n",
     "  ORDER BY a.title, t.track_number\n",
-    ";`\n",
+    ";\n",
+    "```\n",
     "\n",
     "## 11.3 Creating a view\n",
     "-- album.db\n",
     "\n",
     "A view is effectively a saved table.\n",
-    "- `SELECT id, album_id, title, track_number, \n",
-    "  duration / 60 AS m, duration % 60 AS s FROM track;`\n",
+    "```sql\n",
+    "SELECT id, album_id, title, track_number, \n",
+    "  duration / 60 AS m, duration % 60 AS s FROM track;\n",
+    "  ```\n",
     "\n",
     "- A view can be saved in the database instead of creating a new table.\n",
-    "- `CREATE VIEW trackView AS\n",
+    "```sql\n",
+    "CREATE VIEW trackView AS\n",
     "  SELECT id, album_id, title, track_number, \n",
-    "    duration / 60 AS m, duration % 60 AS s FROM track;`\n",
+    "    duration / 60 AS m, duration % 60 AS s FROM track;\n",
+    "    ```\n",
     "\n",
     "- When you're done, drop the view as: `DROP VIEW IF EXISTS trackView;`\n",
     "\n",
     "## 11.4 Joined view\n",
     "-- album.db\n",
     "\n",
-    "- `SELECT a.artist AS artist,\n",
+    "```sql\n",
+    "SELECT a.artist AS artist,\n",
     "    a.title AS album,\n",
     "    t.title AS track,\n",
     "    t.track_number AS trackno,\n",
@@ -87,10 +109,12 @@
     "  FROM track AS t\n",
     "    JOIN album AS a\n",
     "      ON a.id = t.album_id\n",
-    ";`\n",
-    "    - Select always returns a table\n",
+    ";\n",
+    "```\n",
+    "- Select always returns a table\n",
     "\n",
-    "- `CREATE VIEW joinedAlbum AS\n",
+    "```sql\n",
+    "CREATE VIEW joinedAlbum AS\n",
     "  SELECT a.artist AS artist,\n",
     "      a.title AS album,\n",
     "      t.title AS track,\n",
@@ -100,15 +124,18 @@
     "    FROM track AS t\n",
     "    JOIN album AS a\n",
     "      ON a.id = t.album_id\n",
-    ";`\n",
-    "    - That table can be saved as a view.\n",
+    ";\n",
+    "```\n",
+    "- That table can be saved as a view.\n",
     "\n",
-    "- `SELECT artist, album, track, trackno, \n",
+    "```sql\n",
+    "SELECT artist, album, track, trackno, \n",
     "   m || ':' || substr('00' || s, -2, 2) AS duration\n",
-    "    FROM joinedAlbum;`\n",
-    "    - and then a complex query can be run on that view.\n",
-    "    - recall `||` is concatenation in SQLite\n",
-    "    - `00` is just a trick to convert into format mm:ss"
+    "    FROM joinedAlbum;\n",
+    "```\n",
+    "- and then a complex query can be run on that view.\n",
+    "- recall `||` is concatenation in SQLite\n",
+    "- `00` is just a trick to convert into format mm:ss"
    ]
   }
  ],
