--- a/Lecture_04_Relationships.ipynb
+++ b/Lecture_04_Relationships.ipynb
@@ -22,10 +22,13 @@
     "\n",
     "## 4.2 JOIN statements \n",
     "- join example tables, left and right\n",
-    "- `CREATE TABLE left ( id INTEGER, description TEXT );\n",
-    "CREATE TABLE right ( id INTEGER, description TEXT );`\n",
-    "<br><br>\n",
-    "- `INSERT INTO left VALUES ( 1, 'left 01' );\n",
+    "```sql\n",
+    "CREATE TABLE left ( id INTEGER, description TEXT );\n",
+    "CREATE TABLE right ( id INTEGER, description TEXT );\n",
+    "```\n",
+    "---\n",
+    "```sql\n",
+    "INSERT INTO left VALUES ( 1, 'left 01' );\n",
     "INSERT INTO left VALUES ( 2, 'left 02' );\n",
     "INSERT INTO left VALUES ( 3, 'left 03' );\n",
     "INSERT INTO left VALUES ( 4, 'left 04' );\n",
@@ -33,9 +36,11 @@
     "INSERT INTO left VALUES ( 6, 'left 06' );\n",
     "INSERT INTO left VALUES ( 7, 'left 07' );\n",
     "INSERT INTO left VALUES ( 8, 'left 08' );\n",
-    "INSERT INTO left VALUES ( 9, 'left 09' );`\n",
-    "<br><br>\n",
-    "- `INSERT INTO right VALUES ( 6, 'right 06' );\n",
+    "INSERT INTO left VALUES ( 9, 'left 09' );\n",
+    "```\n",
+    "---\n",
+    "```sql\n",
+    "INSERT INTO right VALUES ( 6, 'right 06' );\n",
     "INSERT INTO right VALUES ( 7, 'right 07' );\n",
     "INSERT INTO right VALUES ( 8, 'right 08' );\n",
     "INSERT INTO right VALUES ( 9, 'right 09' );\n",
@@ -43,63 +48,81 @@
     "INSERT INTO right VALUES ( 11, 'right 11' );\n",
     "INSERT INTO right VALUES ( 11, 'right 12' );\n",
     "INSERT INTO right VALUES ( 11, 'right 13' );\n",
-    "INSERT INTO right VALUES ( 11, 'right 14' );`\n",
-    "<br><br>\n",
-    "- `SELECT * FROM left;\n",
-    "SELECT * FROM right;`\n",
-    "<br><br>\n",
-    "- `SELECT l.description AS left, r.description AS right\n",
+    "INSERT INTO right VALUES ( 11, 'right 14' );\n",
+    "```\n",
+    "---\n",
+    "```\n",
+    "SELECT * FROM left;\n",
+    "SELECT * FROM right;\n",
+    "```\n",
+    "---\n",
+    "```sql\n",
+    "SELECT l.description AS left, r.description AS right\n",
     "  FROM left AS l\n",
     "  JOIN right AS r ON l.id = r.id\n",
-    "  ;`\n",
-    "    - The joint query. Inner join where the left and right IDs match, show their descriptions. In the first line, you provide alias for the two columns since they have the same column\n",
+    "  ;\n",
+    "```\n",
+    "- The joint query. Inner join where the left and right IDs match, show their descriptions. In the first line, you provide alias for the two columns since they have the same column\n",
     "- to do left outer join, `LEFT JOIN right AS r ON l.id = r.id`\n",
-    "<br><br>\n",
+    "---\n",
     "- restore database\n",
-    "- `DROP TABLE left;\n",
-    "DROP TABLE right;`\n",
-    "<br><br>\n",
+    "```sql\n",
+    "DROP TABLE left;\n",
+    "DROP TABLE right;\n",
+    "```\n",
+    "---\n",
     "- sale example\n",
-    "- `SELECT * FROM sale;\n",
-    "SELECT * FROM item;`\n",
-    "<br><br>\n",
-    "- `SELECT s.id AS sale, i.name, s.price \n",
+    "```sql\n",
+    "SELECT * FROM sale;\n",
+    "SELECT * FROM item;\n",
+    "```\n",
+    "---\n",
+    "```sql\n",
+    "SELECT s.id AS sale, i.name, s.price \n",
     "  FROM sale AS s\n",
     "  JOIN item AS i ON s.item_id = i.id\n",
-    "  ;`\n",
-    "    - slightly better example. Obtain sale ID, name of item and price from two different tables (sale and item)\n",
-    "<br><br>\n",
-    "- `SELECT s.id AS sale, s.date, i.name, i.description, s.price \n",
+    "  ;\n",
+    "```\n",
+    "- slightly better example. Obtain sale ID, name of item and price from two different tables (sale and item)\n",
+    "---\n",
+    "```sql\n",
+    "SELECT s.id AS sale, s.date, i.name, i.description, s.price \n",
     "  FROM sale AS s\n",
     "  JOIN item AS i ON s.item_id = i.id\n",
-    "  ;`\n",
-    "<br><br>\n",
+    "  ;\n",
+    "```\n",
+    "---\n",
     "\n",
     "## 4.3 Junction\n",
     "In practice, tables have many-to-many relationships.\n",
-    "-- test.db\n",
     "\n",
-    "- `SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
+    "```sql\n",
+    "-- test.db\n",
+    "SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
     "  FROM sale AS s\n",
     "  JOIN item AS i ON s.item_id = i.id\n",
     "  JOIN customer AS c ON s.customer_id = c.id\n",
     "  ORDER BY Cust, Item\n",
-    ";`\n",
-    "    - combines cutomer, sale and item tables\n",
-    "    - these can be ordered as well\n",
-    "\n",
+    ";\n",
+    "```\n",
+    "- combines cutomer, sale and item tables\n",
+    "- these can be ordered as well\n",
+    "---\n",
     "- What if you want your table to include a customer without sales?\n",
-    "- `INSERT INTO customer ( name ) VALUES ( 'Jane Smith' );\n",
+    "```sql\n",
+    "INSERT INTO customer ( name ) VALUES ( 'Jane Smith' );\n",
     "SELECT * FROM customer;`\n",
-    "\n",
+    "```\n",
     "- Use left join to join other tables _with Customer_.\n",
-    "- `SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
+    "```sql\n",
+    "SELECT c.name AS Cust, c.zip, i.name AS Item, i.description, s.quantity AS Quan, s.price AS Price\n",
     "  FROM customer AS c\n",
     "  LEFT JOIN sale AS s ON s.customer_id = c.id\n",
     "  LEFT JOIN item AS i ON s.item_id = i.id\n",
     "  ORDER BY Cust, Item\n",
-    ";`\n",
-    "    - This is amazing. It adds multiple sale entries for customers in separate rows."
+    ";\n",
+    "```\n",
+    "- This is amazing. It adds multiple sale entries for customers in separate rows."
    ]
   }
  ],
