--- a/Lecture_08_Aggregates.ipynb
+++ b/Lecture_08_Aggregates.ipynb
@@ -13,36 +13,42 @@
     "- `SELECT COUNT(*) FROM Country;`\n",
     "    - COUNT is an aggregate function\n",
     "    \n",
-    "- `SELECT Region, COUNT(*)\n",
+    "```sql\n",
+    "SELECT Region, COUNT(*)\n",
     "  FROM Country\n",
     "  GROUP BY Region\n",
-    ";`\n",
-    "    - GROUP BY groups the results before calling COUNT\n",
+    ";\n",
+    "```\n",
+    "- GROUP BY groups the results before calling COUNT\n",
     "\n",
-    "    \n",
     "-- album.db\n",
     "\n",
     "- This also works with join queries\n",
-    "- `SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
+    "```sql\n",
+    "SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
     "  FROM track AS t\n",
     "  JOIN album AS a\n",
     "    ON a.id = t.album_id\n",
     "  GROUP BY a.id\n",
     "  ORDER BY Tracks DESC, Album\n",
-    ";`\n",
+    ";\n",
+    "```\n",
     "\n",
     "\n",
-    "- `SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
+    "```sql\n",
+    "SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
     "  FROM track AS t\n",
     "  JOIN album AS a\n",
     "    ON a.id = t.album_id\n",
     "  GROUP BY a.id\n",
     "  HAVING Tracks >= 10\n",
     "  ORDER BY Tracks DESC, Album\n",
-    ";`\n",
-    "    - using a HAVING clause along with aggregation\n",
+    ";\n",
+    "```\n",
+    "- using a HAVING clause along with aggregation\n",
     "    \n",
-    "- `SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
+    "```sql\n",
+    "SELECT a.title AS Album, COUNT(t.track_number) as Tracks\n",
     "  FROM track AS t\n",
     "  JOIN album AS a\n",
     "    ON a.id = t.album_id\n",
@@ -50,8 +56,9 @@
     "  GROUP BY a.id\n",
     "  HAVING Tracks >= 10\n",
     "  ORDER BY Tracks DESC, Album\n",
-    ";`\n",
-    "    - a WHERE clause can also be used\n",
+    ";\n",
+    "```\n",
+    "- a WHERE clause can also be used\n",
     "    \n",
     "- WHERE clause must be before GROUP BY because WHERE acts before aggregation\n",
     "- HAVING after GROUP BY since it acts on aggregate data\n",
