--- a/Lecture_09_Transactions.ipynb
+++ b/Lecture_09_Transactions.ipynb
@@ -15,39 +15,47 @@
     "## 9.2 transactions\n",
     "-- test.db\n",
     "\n",
-    "- `CREATE TABLE widgetInventory (\n",
+    "```sql\n",
+    "CREATE TABLE widgetInventory (\n",
     "  id INTEGER PRIMARY KEY,\n",
     "  description TEXT,\n",
     "  onhand INTEGER NOT NULL\n",
-    ");`\n",
+    ");\n",
+    "```\n",
     "\n",
-    "- `CREATE TABLE widgetSales (\n",
+    "```sql\n",
+    "CREATE TABLE widgetSales (\n",
     "  id INTEGER PRIMARY KEY,\n",
     "  inv_id INTEGER,\n",
     "  quan INTEGER,\n",
     "  price INTEGER\n",
-    ");`\n",
+    ");\n",
+    "```\n",
     "\n",
     "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'rock', 25 );\n",
     "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'paper', 25 );\n",
-    "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'scissors', 25 );`\n",
+    "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'scissors', 25 );\n",
+    "```\n",
     "\n",
     "- Suppose you have the above two tables. Suppose we sell something from inventory, both the Sales and Inventory table need to be updated. It doesn't make sense to update only one.\n",
     "\n",
-    "- `BEGIN TRANSACTION;\n",
+    "```sql\n",
+    "BEGIN TRANSACTION;\n",
     "INSERT INTO widgetSales ( inv_id, quan, price ) VALUES ( 1, 5, 500 );\n",
     "UPDATE widgetInventory SET onhand = ( onhand - 5 ) WHERE id = 1;\n",
-    "END TRANSACTION;`\n",
+    "END TRANSACTION;\n",
+    "```\n",
     "    - ensures both are performed.\n",
     "\n",
     "## 9.3 performance\n",
     "Example:\n",
-    "- `\n",
+    "```sql\n",
     "BEGIN TRANSACTION;\n",
     "-- copy / paste 1,000 of these ...\n",
     "INSERT INTO test ( data ) VALUES ( 'this is a good sized line of text.' );\n",
     "-- put this after the 1,000 INSERT statements\n",
-    "END TRANSACTION;`\n",
+    "END TRANSACTION;\n",
+    "```\n",
     "- Without the begin and end transaction, the speed in SQLite is ~20 times slower."
    ]
   }
