fix syntax typos

--- a/Lecture_02_SQL_Statement.ipynb
+++ b/Lecture_02_SQL_Statement.ipynb
@@ -16,15 +16,17 @@
     "These parts together constitute a statement.\n",
     "\n",
     "- CRUD: 4 fundamental database system functions. Create Read Update Delete.\n",
-    "- SELECT: all queries that return values. (R in CRUD)\n",
-    "- INSERT: add a row to a table (C in CRUD).\n",
+    "1. SELECT: all queries that return values. (R in CRUD)\n",
+    "2. INSERT: add a row to a table (C in CRUD).\n",
     "    - example:\n",
     "```sql\n",
     "INSERT INTO Customer (name, city, state)\n",
     "    VALUES ('Jimi Hendrix', 'Renton', 'WA');\n",
     "```\n",
-    "    - Broken into two lines to improve readability.\n",
-    "- UPDATE: to change data (U in CRUD)\n",
+    "\n",
+    "- Broken into two lines to improve readability.\n",
+    "\n",
+    "3. UPDATE: to change data (U in CRUD)\n",
     "    - example: \n",
     "```sql\n",
     "UPDATE customer \n",
@@ -33,7 +35,7 @@
     "    zip = '98056' \n",
     "WHERE id = 5;\n",
     "```\n",
-    "- DELETE: remove rows in a table (D in CRUD).\n",
+    "4. DELETE: remove rows in a table (D in CRUD).\n",
     "    - example: `DELETE FROM Customer WHERE id = 4;`\n",
     "    \n",
     "## 2.2 Database Organization\n",
