--- a/Lecture_08_Aggregates.ipynb
+++ b/Lecture_08_Aggregates.ipynb
@@ -81,7 +81,7 @@
     "- `SELECT Region, SUM(Population) FROM Country GROUP BY Region;`\n",
     "    - SUM\n",
     "\n",
-    "# 8.3 DISTINCT Aggregates\n",
+    "## 8.3 DISTINCT Aggregates\n",
     "-- world.db\n",
     "\n",
     "- `SELECT COUNT(HeadOfState) FROM Country;`\n",
