--- a/Lecture_09_Transactions.ipynb
+++ b/Lecture_09_Transactions.ipynb
@@ -31,10 +31,10 @@
     "  price INTEGER\n",
     ");\n",
     "```\n",
-    "\n",
-    "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'rock', 25 );\n",
-    "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'paper', 25 );\n",
-    "- `INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'scissors', 25 );\n",
+    "```sql\n",
+    "INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'rock', 25 );\n",
+    "INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'paper', 25 );\n",
+    "INSERT INTO widgetInventory ( description, onhand ) VALUES ( 'scissors', 25 );\n",
     "```\n",
     "\n",
     "- Suppose you have the above two tables. Suppose we sell something from inventory, both the Sales and Inventory table need to be updated. It doesn't make sense to update only one.\n",
@@ -45,7 +45,7 @@
     "UPDATE widgetInventory SET onhand = ( onhand - 5 ) WHERE id = 1;\n",
     "END TRANSACTION;\n",
     "```\n",
-    "    - ensures both are performed.\n",
+    "- ensures both are performed.\n",
     "\n",
     "## 9.3 performance\n",
     "Example:\n",
