--- a/Lecture_03_Fundamental_Concepts.ipynb
+++ b/Lecture_03_Fundamental_Concepts.ipynb
@@ -4,15 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Fundamental Concepts\n",
+    "# 3. Fundamental Concepts\n",
     "\n",
     "## 3.1 CREATE TABLE\n",
+    "```sql\n",
     "-- test.db\n",
-    "\n",
-    "- `CREATE TABLE test (\n",
+    "CREATE TABLE test (\n",
     "  a INTEGER,\n",
     "  b TEXT\n",
-    ");`\n",
+    ");\n",
+    "```\n",
     "    - creates a table according to the provided parameters.\n",
     "    - column definitions are called the 'database schema' or 'table schema' (part between the paranthesis)\n",
     "    - note that last item can not have a comma (syntax error)\n",
@@ -25,8 +26,9 @@
     "- `SELECT * FROM test;`\n",
     "\n",
     "## 3.2 DROP TABLE\n",
+    "```sql\n",
     "-- test.db\n",
-    "\n",
+    "```\n",
     "- `CREATE TABLE test ( a TEXT, b TEXT );`\n",
     "    - error: table already exists\n",
     "    - if you want to create it differently, you must delete the  table first\n",
@@ -40,11 +42,11 @@
     "    - delete if it exists\n",
     "    \n",
     "## 3.3 INSERT INTO\n",
-    "-- test.db <br>\n",
-    "to add one or many rows!\n",
-    "\n",
+    "```sql\n",
+    "-- test.db\n",
+    "```\n",
+    "- You can add one or many rows.\n",
     "- `CREATE TABLE test ( a INTEGER, b TEXT, c TEXT );`\n",
-    "\n",
     "- `INSERT INTO test VALUES ( 1, 'This', 'Right here!' ); `\n",
     "- `INSERT INTO test ( b, c ) VALUES ( 'That', 'Over there!' ); `\n",
     "    - don't always have to add data to all columns\n",
@@ -55,8 +57,9 @@
     "    - adds rows from a different table (all rows)\n",
     "\n",
     "## 3.4 DELETE FROM\n",
+    "```sql\n",
     "-- test.db\n",
-    "\n",
+    "```\n",
     "- `DELETE FROM test WHERE a = 3;`\n",
     "    - deletes row where a = 3\n",
     "- `SELECT * FROM test WHERE a = 1;`\n",
@@ -65,8 +68,9 @@
     "    - deletes rows where a = 1\n",
     "    \n",
     "## 3.5 NULL\n",
+    "```sql\n",
     "-- test.db\n",
-    "\n",
+    "```\n",
     "- `SELECT * FROM test WHERE a = NULL;`\n",
     "    - does not work because NULL is not a value\n",
     "- `SELECT * FROM test WHERE a IS NULL;`\n",
@@ -104,8 +108,9 @@
     "- `DROP TABLE IF EXISTS test;`\n",
     "\n",
     "## 3.6 Constraints\n",
+    "```sql\n",
     "-- test.db\n",
-    "\n",
+    "```\n",
     "- `CREATE TABLE test ( a TEXT, b TEXT, c TEXT );`\n",
     "- `INSERT INTO test ( a, b ) VALUES ( 'one', 'two' );`\n",
     "- `SELECT * FROM test;`\n",
@@ -124,8 +129,8 @@
     "\n",
     "## 3.7 ALTER TABLE\n",
     "- Sometimes you need to change the database schema after it has been defined.\n",
-    "-- test.db\n",
     "```sql\n",
+    "-- test.db\n",
     "CREATE TABLE test ( a TEXT, b TEXT, c TEXT );\n",
     "INSERT INTO test VALUES ( 'one', 'two', 'three');\n",
     "INSERT INTO test VALUES ( 'two', 'three', 'four');\n",
@@ -142,8 +147,8 @@
     "## 3.8 ID\n",
     "- Typically ID columns are automatically populated. This column hold a unique value for each row in a table.\n",
     "- How you create it depends on the database system. These instructions are sepcific to SQLite.\n",
-    "-- test.db\n",
     "```sql\n",
+    "-- test.db\n",
     "CREATE TABLE test (\n",
     "  id INTEGER PRIMARY KEY,\n",
     "  a INTEGER,\n",
@@ -157,9 +162,10 @@
     "```\n",
     "\n",
     "## 3.9 WHERE, LIKE, and IN\n",
+    "```sql\n",
     "-- world.db\n",
+    "```\n",
     "- How do we query the database for specific data? Using WHERE.\n",
-    "\n",
     "- `SELECT * FROM Country;`\n",
     "    - Selects everything\n",
     "- `SELECT Name, Continent, Population FROM Country \n",
@@ -185,11 +191,13 @@
     "     - to match values _in_ a list, the IN operator is used.\n",
     "     \n",
     "## 3.10 SELECT DISTINCT\n",
+    "```sql\n",
     "-- world.db\n",
+    "```\n",
     "- `SELECT Continent FROM Country;`\n",
     "- `SELECT DISTINCT Continent FROM Country;`\n",
     "    - Using the SELECT DISTINCT statement, you will get only unique results. \n",
-    " \n",
+    "---\n",
     "```sql\n",
     "-- test.db\n",
     "DROP TABLE IF EXISTS test;\n",
@@ -214,8 +222,9 @@
     "    - shows only rows with distinct values in the pair (`a`, `b`).\n",
     "    \n",
     "## 3.11 ORDER BY\n",
+    "```sql\n",
     "-- world.db\n",
-    "\n",
+    "```\n",
     "- `SELECT Name FROM Country;`\n",
     "- `SELECT Name FROM Country ORDER BY Name;`\n",
     "    - _sorts_ by the name column (ASCII order, default is ascending)\n",
@@ -230,15 +239,13 @@
     "\n",
     "## 3.12 CASE\n",
     "Use when you need conditional expressions\n",
-    "-- test.db\n",
-    "\n",
     "```sql\n",
+    "-- test.db\n",
     "DROP TABLE IF EXISTS booltest;\n",
     "CREATE TABLE booltest (a INTEGER, b INTEGER);\n",
     "INSERT INTO booltest VALUES (1, 0);\n",
     "SELECT * FROM booltest;\n",
     "```\n",
-    "\n",
     "- 0 is considered false, anything else is considered true.\n",
     "\n",
     "```sql\n",
@@ -248,6 +255,7 @@
     "    FROM booltest\n",
     ";\n",
     "```\n",
+    "---\n",
     "```sql\n",
     "SELECT\n",
     "    CASE a WHEN 1 THEN 'true' ELSE 'false' END AS boolA,\n",
